fixed overflow issue

--- a/react-app/basoene/src/css/analytics.css
+++ b/react-app/basoene/src/css/analytics.css
@@ -1,7 +1,7 @@
 .analytics{
     width: 100%;
     height: 100svh;
-    --chart-margin-left: 3.5rem;
+    --chart-margin-left: 1rem;
 }
 
 
@@ -17,6 +17,7 @@
     overflow-x: scroll;
     scrollbar-width: none;
     scroll-behavior: smooth;
+    gap: 0.5rem;
 }
 
 .big-grid::-webkit-scrollbar{
@@ -117,7 +118,7 @@
     margin-top: -1rem;
     display: flex;
     width: 100%;
-    gap: 1rem;
+    gap: 0.5rem;
     padding: 2rem;
     margin-left: calc(var(--chart-margin-left) - 2rem);
 }
@@ -127,7 +128,7 @@
     aspect-ratio: 16/9;
     background: var(--light-clr);
     box-shadow: var(--box-shadow);
-    border-radius: 0.5rem;
+    border-radius: var(--border-radius);
     }
 
 .summary-card h5{
@@ -146,10 +147,11 @@
     display: grid;
     grid-template-columns: 1fr 1fr;
     margin-left: var(--chart-margin-left);
+    gap: 0.5rem;
 }
 
 .chart-wrapper{
-    width: 32rem;
+    width: 31rem;
     padding: 1rem;
     border-radius: var(--border-radius);
     background-color: var(--light-clr);
